src/math_ops/snapshots/rbx_types_ops__math_ops__color3uint8__color3uint8_sub_color3.snap
---
source: src/math_ops/color3uint8.rs
expression: "Color3uint8::new(255, 128, 51).sub(&Color3::new(1.0, 0.5, 0.2).into())"
---
Color3uint8:
  - 0
  - 0
  - 0
