src/math_ops/snapshots/rbx_types_ops__math_ops__color3uint8__color3uint8_sub_f32.snap
---
source: src/math_ops/color3uint8.rs
expression: "Color3uint8::new(255, 128, 51).sub(&5.0f32.into())"
---
Color3uint8:
  - 250
  - 123
  - 46
